make prettier listings

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -11,7 +11,7 @@
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Image url:</strong>
-    <%= product.image_url %>
+    <%= image_tag product.image_url, class: 'w-40' %>
   </p>
 
   <p class="my-5">
