--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,15 +1,22 @@
 <div id="<%= dom_id cart %>">
-  <h2 class="font-bold text-lg mb-3">Your Pragmatic Cart</h2>
-  <ul class="list-disc list-inside">
+  <h2 class="font-bold text-lg mb-3">Your Cart</h2>
+  <table class="table-auto">
     <% cart.line_items.each do |item| %>
-      <li>
-        <%= item.product.title %>
-      </li>
+      <tr>
+        <td class="text-right"><%= item.quantity %></td>
+        <td>&times;</td>
+        <td class="pr-2"><%= item.product.title %></td>
+        <td class="text-right font-bold"><%= number_to_currency(item.total_price) %></td>
+      </tr>
     <% end %>
-  </ul>
-  <% if action_name != "show" %>
-    <%= link_to "Show this cart", cart, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this cart', edit_cart_path(cart), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <hr class="mt-6">
-  <% end %>
+    <tfoot>
+    <tr>
+      <th class="text-right pr-2 pt-2" colspan="3">Total:</th>
+      <td class="text-right pt-2 font-bold border-t-2 border-black"><%= number_to_currency(cart.total_price)%></td>
+    </tr>
+    </tfoot>
+  </table>
+  <%= button_to 'Empty Cart', cart, method: :delete, class: "mt-4 rounded-lg py-1 px-2 text-white bg-green-600" %>
+
+
 </div>
