task f:hotwiring the storefont

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,20 +1,10 @@
 <div id="<%= dom_id cart %>">
   <h2 class="font-bold text-lg mb-3">Your Cart</h2>
   <table class="table-auto">
-    <% cart.line_items.each do |item| %>
-      <tr>
-        <td class="text-right"><%= item.quantity %></td>
-        <td>&times;</td>
-        <td class="pr-2"><%= item.product.title %></td>
-        <td class="text-right font-bold"><%= number_to_currency(item.total_price) %></td>
-        <td>
-          <%= button_to 'delete', item, method: :delete, class: "ml-2 rounded-lg py-1 px-2 text-white bg-red-600",title:'delete from the cart' %>
-        </td>
-      </tr>
-    <% end %>
+    <%= render cart.line_items %>
     <tfoot>
     <tr>
-      <th class="text-right pr-2 pt-2" colspan="3">Total:</th>
+      <th class="text-right pr-2 pt-2" colspan="4">Total:</th>
       <td class="text-right pt-2 font-bold border-t-2 border-black"><%= number_to_currency(cart.total_price)%></td>
     </tr>
     </tfoot>
