--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 </header>
 <section class="flex">
   <nav class="bg-green-900 p-6">
+    <%= render partial: 'layouts/cart', locals: { cart: @cart } %>
     <ul class="text-gray-300 leading-8">
       <li><a href="/">Home</a></li>
       <li><a href="/questions">Questions</a></li>
@@ -26,9 +27,9 @@
     </ul>
   </nav>
 
-<main class="container mx-auto mt-4 px-5 flex">
-  <%= yield %>
-</main>
+  <main class="container mx-auto mt-4 px-5 flex">
+    <%= yield %>
+  </main>
 </section>
 </body>
 </html>
