--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,34 +1,15 @@
 <div class="w-full">
-  <% if notice.present? %>
-    <div class="py-2 px-3 bg-green-50 text-green-500 rounded-lg mb-t font-medium inline-block" id="notice">
-      <%= notice %>
-    </div>
-  <% end %>
+  <%= render 'notice' %>
   <h1 class="font-bold text-xl mb-6 pb-2 border-b-2">
     Your Pragmatic Catalog
   </h1>
+  <%= turbo_stream_from 'products' %>
+
   <ul>
     <% cache @products do %>
       <% @products.each do |product| %>
         <% cache product do %>
-          <li class="flex mb-6">
-            <%= image_tag product.image_url, class: 'object-contain w-40 h-48 shadow mr-6' %>
-            <div>
-              <h2 class="text-lg font-bold mb-3">
-                <%= product.title %>
-              </h2>
-              <p>
-                <%= sanitize product.description %>
-              </p>
-              <div class="mt-3">
-                <%= number_to_currency product.price %>
-                <%= button_to 'Add to Cart',
-                              line_items_path(product_id: product),
-                              form_class: 'inline',
-                              class: 'ml-4 rounded-lg py-1 px-2 text-white bg-green-600' %>
-              </div>
-            </div>
-          </li>
+          <%= render partial: 'product', object: product %>
         <% end %>
       <% end %>
     <% end %>
