--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -5,9 +5,18 @@
     <tfoot>
     <tr>
       <th class="text-right pr-2 pt-2" colspan="4">Total:</th>
-      <td class="text-right pt-2 font-bold border-t-2 border-black"><%= number_to_currency(cart.total_price)%></td>
+      <td class="text-right pt-2 font-bold border-t-2 border-black"><%= number_to_currency(cart.total_price) %></td>
     </tr>
     </tfoot>
   </table>
-  <%= button_to 'Empty Cart', cart, method: :delete, class: "mt-4 rounded-lg py-1 px-2 text-white bg-green-600" %>
+  <div class="flex mr-1">
+    <%= button_to 'Empty Cart', cart, method: :delete, class: "ml-4 rounded-lg py-1 px-2 text-white bg-green-600" %>
+    <div data-controller="checkout" >
+      <%= button_to "Checkout", new_order_path, method: :get,
+                    'data-checkout-target'=>'checkout',
+                    'data-action'=>'checkout#click',
+                    class: "ml-4 rounded-lg py-1 px-2 text-black bg-green-200" %>
+    </div>
+
+  </div>
 </div>
