--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,4 +7,8 @@
     .input-field {
         @apply block shadow rounded-md border border-green-400 outline-none px-3 py-2 mt-2 w-full;
     }
+
+    .payment-field {
+        @apply block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full;
+    }
 }
