--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id cart %>">
-  <h2 class="font-bold text-lg mb-3">Your Cart</h2>
+  <h2 class="font-bold text-lg mb-3"><%= t('.title') %></h2>
   <table class="table-auto">
     <%= render cart.line_items %>
     <tfoot>
@@ -10,9 +10,9 @@
     </tfoot>
   </table>
   <div class="flex mr-1">
-    <%= button_to 'Empty Cart', cart, method: :delete, class: "ml-4 rounded-lg py-1 px-2 text-white bg-green-600" %>
+    <%= button_to t('.empty'), cart, method: :delete, class: "ml-4 rounded-lg py-1 px-2 text-white bg-green-600" %>
     <div data-controller="checkout" >
-      <%= button_to "Checkout", new_order_path, method: :get,
+      <%= button_to t('.checkout'), new_order_path, method: :get,
                     'data-checkout-target'=>'checkout',
                     'data-action'=>'checkout#click',
                     class: "ml-4 rounded-lg py-1 px-2 text-black bg-green-200" %>
