--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,18 @@
 
 <body>
 <header class="bg-green-700">
+  <aside data-controller="locale">
+    <%= form_tag store_index_path, class: 'locale' do %>
+      <%= select_tag 'set_locale',
+                     options_for_select( [
+                                           ['English', 'en'],
+                                           ["Espa&ntilde;ol".html_safe, 'es'],
+                                           ["中文", 'cn']
+                                         ], I18n.locale.to_s),
+                     onchange: 'this.form.submit()' %>
+      <%= submit_tag 'submit', data: { 'locale-target' => 'submit' } %>
+    <% end %>
+  </aside>
   <%= image_tag 'logo.svg', alt: 'The Pragmatic Bookshelf' %>
   <h1><%= @page_title %></h1>
 </header>
@@ -20,10 +32,10 @@
   <nav class="bg-green-900 p-6">
     <%= render partial: 'layouts/cart', locals: { cart: @cart } %>
     <ul class="text-gray-300 leading-8">
-      <li><a href="/">Home</a></li>
-      <li><a href="/questions">Questions</a></li>
-      <li><a href="/news">News</a></li>
-      <li><a href="/contact">Contact</a></li>
+      <li><a href="/"><%= t('.home') %></a></li>
+      <li><a href="/questions"><%= t('.questions') %></a></li>
+      <li><a href="/news"><%= t('.news') %></a></li>
+      <li><a href="/contact"><%= t('.contact') %></a></li>
     </ul>
 
     <% if session[:user_id] %>
