--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full">
   <%= render 'notice' %>
   <h1 class="font-bold text-xl mb-6 pb-2 border-b-2">
-    Your Pragmatic Catalog
+    <%= t('.title_html') %>
   </h1>
   <%= turbo_stream_from 'products' %>
 
